# my_rust_journal

./: .gitignore  Cargo.toml  README.md
are_arrays_mutable/: Cargo.toml
are_arrays_mutable/src/: main.rs
borrow_experiments/: Cargo.toml
borrow_experiments/src/: main.rs
ch04_may_i_mutable_unmutable_qm2/: cargo.toml
ch04_may_i_mutable_unmutable_qm2/src/: main.rs
ch13_skim/: Cargo.toml
ch13_skim/src/: main.rs
ch3_1_variables_and_mutability/: Cargo.toml
ch3_1_variables_and_mutability/src/: .main.rs.swp  functions.rs  main.rs
ch5_structures/: Cargo.toml
ch5_structures/src/: main.rs
ch6_enums/src/: main.rs
ch7_modules/: Cargo.toml
ch7_modules/src/: choice.rs  lib.rs  player.rs  scene.rs
ch8_1_median/: Cargo.toml
ch8_1_median/src/: main.rs
ch8_2_piglatin/: Cargo.toml
ch8_2_piglatin/src/: main.rs
ch8_3_human_resources/: Cargo.toml
ch8_3_human_resources/src/: database.rs  main.rs
ch8_collections/src/: main.rs
chapter3_guessing_game/: Cargo.toml
chapter3_guessing_game/src/: main.rs
docs/: chapter_01-03-hello-cargo.md  journal.md
oct_30_ramblings/: Cargo.toml
oct_30_ramblings/src/: main.rs
src/: main.rs
understanding_iterators/: Cargo.toml
understanding_iterators/src/: main.rs
